# inbount_management_system

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  task.md
.github/workflows/: build-desktop.yml
backend/: Dockerfile  alembic.ini  desktop.spec  desktop_app.py  pyproject.toml  seed_data.py
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/v1/: __init__.py  auth.py  bulletins.py  dashboard.py  goods_request.py  goods_types.py  inbound.py  purchase.py  stock.py  units.py  users.py  warehouses.py
backend/app/core/: __init__.py  security.py
backend/app/models/: __init__.py  bulletin.py  request.py  stock.py  user.py  warehouse.py
backend/app/schemas/: __init__.py  auth.py  bulletin.py  common.py  request.py  stock.py  user.py  warehouse.py
backend/app/services/: __init__.py  bulletin_service.py  dashboard_service.py  inbound_service.py  request_service.py  stock_service.py  user_service.py  warehouse_service.py
docs/architecture/: api-specification.md  database-design.md  overview.md
docs/deployment/: deployment-guide.md
frontend/: Dockerfile  TEST_REPORT.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  bulletin.ts  client.ts  consumableType.ts  dashboard.ts  inbound.ts  index.ts  notification.ts  stock.ts  unit.ts  user.ts  warehouse.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx
frontend/src/store/: authStore.ts
material_cos/: CLAUDE.md
(+18 files in other folders)
